updated source to let user use own MQTT Topic
Also removed signing keys and cleaned up the UI design.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,6 @@
 node_modules
+Debug
+Control Interface for Windows/Source Code/.vs/RoomCommander/v16/.suo
+Control Interface for Windows/Source Code/.vs/RoomCommander/v16/Server/sqlite3/db.lock
+Control Interface for Windows/Source Code/.vs/RoomCommander/v16/Server/sqlite3/storage.ide
+Control Interface for Windows/Source Code/RoomCommander.csproj.user
