--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "MIT",
   "repository": "https://github.com/YoloSwagDogDiggity/PiDeviceNet.git",
   "dependencies": {
+    "chalk": "^3.0.0",
+    "dht-sensor": "0.0.5",
     "mqtt": "^3.0.0",
+    "node-schedule": "^1.3.2",
     "rpio": "^1.3.0"
   }
 }
