--- a/Control Interface for Windows/Source Code/RoomCommander.csproj
+++ b/Control Interface for Windows/Source Code/RoomCommander.csproj
@@ -174,6 +174,9 @@
   <ItemGroup>
     <Content Include="Papirus-Team-Papirus-Devices-Network-wireless-hotspot.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Icons\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\NETStandard.Library.2.0.0\build\netstandard2.0\NETStandard.Library.targets" Condition="Exists('packages\NETStandard.Library.2.0.0\build\netstandard2.0\NETStandard.Library.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
