--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "repository": "https://github.com/YoloSwagDogDiggity/PiDeviceNet.git",
   "dependencies": {
     "chalk": "^3.0.0",
-    "dht-sensor": "0.0.5",
     "mqtt": "^3.0.0",
-    "node-dht-sensor": "^0.4.0",
+    "node-dht-sensor": "^0.4.1",
     "node-schedule": "^1.3.2",
-    "rpio": "^1.3.0"
+    "raspi": "^6.0.1",
+    "raspi-pwm": "^6.0.0",
+    "rpio": "^2.1.1"
   }
 }
