--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "repository": "https://github.com/YoloSwagDogDiggity/PiDeviceNet.git",
   "dependencies": {
     "chalk": "^3.0.0",
+    "johnny-five": "^1.4.0",
     "mqtt": "^3.0.0",
     "node-dht-sensor": "^0.4.1",
     "node-schedule": "^1.3.2",
     "raspi": "^6.0.1",
     "raspi-pwm": "^6.0.0",
+    "raspi-io": "^11.0.0",
     "rpio": "^2.1.1"
   }
 }
