--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "johnny-five": "^2.1.0",
     "mqtt": "^4.3.7",
     "node-dht-sensor": "^0.4.3",
-    "node-schedule": "^2.1.0",
+    "node-schedule": "^2.1.1",
     "raspi": "^6.0.1",
     "raspi-io": "^11.0.0",
-    "raspi-pwm": "^6.0.0",
+    "raspi-soft-pwm": "^6.0.2",
     "rpio": "^2.4.2"
   }
 }
